@@ -160,13 +160,7 @@
         <surefire.memory.args>-Xmx512m -XX:MetaspaceSize=128m</surefire.memory.args>
         <surefire.jpda.args></surefire.jpda.args>
         <as.debug.port>8787</as.debug.port>
-        <modular.jdk.testsuite.args>${modular.jdk.args}
-            --add-opens=java.base/javax.crypto=ALL-UNNAMED
-            --add-opens=java.base/sun.security.validator=ALL-UNNAMED
-            --add-exports=java.base/sun.security.validator=ALL-UNNAMED
-            --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-            --add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED
-        </modular.jdk.testsuite.args>
+        <modular.jdk.testsuite.args>${modular.jdk.args}</modular.jdk.testsuite.args>
         <surefire.system.args>${modular.jdk.testsuite.args} -Dorg.jboss.ejb.client.wildfly-testsuite-hack=true ${surefire.memory.args} ${surefire.jpda.args} -Djboss.dist=${jboss.dist} ${surefire.jacoco.args} -Dmaven.repo.local=${settings.localRepository}</surefire.system.args>
         <extra.server.jvm.args />
         <!-- needed for arquillian-byteman-extension -->
@@ -306,7 +300,6 @@
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <failIfNoTests>false</failIfNoTests>
-                       <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <jboss.dist>${jboss.dist}</jboss.dist>
@@ -447,7 +440,16 @@
                 <module>layers</module>
             </modules>
         </profile>
-
+        <profile>
+            <id>galleon.module.profile</id>
+            <activation><property><name>galleon.module</name></property></activation>
+            <modules><module>galleon</module></modules>
+        </profile>
+        <profile>
+            <id>galleon_.module.profile</id>
+            <activation><property><name>ts.galleon</name></property></activation>
+            <modules><module>galleon</module></modules>
+        </profile>
         <profile>
             <id>scripts.module.profile</id>
             <activation><property><name>scripts.module</name></property></activation>
